fixed css overlapping for colorline

--- a/src/styles/chart.module.css
+++ b/src/styles/chart.module.css
@@ -1,71 +1,72 @@
-/* .mainContainer{
-  max-width: 1500px;
-  min-width: 1000px;
-  overflow: auto;
-} */
-.apexChartmain{
+.apexChartmain {
   width: 100%;
   height: 100%;
   margin-top: 0px;
   padding-top: 0px;
 }
 
-.apexCharts text tspan{
+.apexCharts text tspan {
   display: none !important;
 }
 
-  .container1 {
-    padding-top: 0px;
-  }
-  
-  .backgroundDiv {
-    padding-top: 0px;
-  }
-  .apexCharts{
-    margin-top: 0px;
-    padding-top: 0px;
-  }
-  .foregroundHead{
-    position: absolute;
-    width: 95%;
-    top: 15%;
-    left: 4%;
-    display: flex;
-    justify-content: space-around;
-    align-items: center;
-    padding: 0px;
-  }
+.container1 {
+  padding-top: 0px;
+}
 
-  .foregroundDiv {
-    display: none;
-    width: 94%;
-    height: 80%;
-    position: absolute;
-    top: 21%;
-    left: 4.6%;
-    z-index: 3;
-    background-color: transparent;
-  }
-  .foregroundDiv table{
-    width: 100%;
-    height: 90%;
-  }
-  
-  .foregroundDiv table tr:nth-child(1) {
-    height: 1.1%;
-  }
-  
-  .foregroundDiv table tr:nth-child(2) {
-    height: 1%;
-  }
-  
-  .foregroundDiv table tr:nth-child(3) {
-    height: 1%;
-  }
-  .foregroundDiv table tr:nth-child(4) {
-    height: 1%;
-  }
-  /* .foregroundDiv table tr:nth-child(4) td {
-    border-bottom: 3px solid green !important;
-  } */
+.backgroundDiv {
+  padding-top: 0px;
+}
 
+.apexCharts {
+  margin-top: 0px;
+  padding-top: 0px;
+}
+
+.foregroundHead {
+  position: absolute;
+  width: 95%;
+  top: 15%;
+  left: 4%;
+  display: flex;
+  justify-content: space-around;
+  align-items: center;
+  padding: 0px;
+}
+
+.foregroundDiv {
+  width: 94%;
+  height: 80%;
+  position: absolute;
+  top: 21%;
+  left: 4.6%;
+  z-index: 3;
+  background-color: transparent;
+}
+
+.foregroundDiv table {
+  width: 100%;
+  height: 90%;
+}
+
+.foregroundDiv table tr:nth-child(1) {
+  height: 1.1%;
+}
+
+.foregroundDiv table tr:nth-child(2) {
+  height: 1%;
+}
+
+.foregroundDiv table tr:nth-child(3) {
+  height: 1%;
+}
+
+.foregroundDiv table tr:nth-child(4) {
+  height: 1%;
+}
+
+.myTable :global(.table:not(.table-bordered) tfoot tr:last-child th),
+.myTable :global(.table:not(.table-bordered) tfoot tr:last-child td),
+.myTable :global(.table:not(.table-bordered) tbody tr:last-child th),
+.myTable :global(.table:not(.table-bordered) tbody tr:last-child td) {
+  border-bottom: 1px solid red  !important;
+}
